--- a/web.html
+++ b/web.html
@@ -10,6 +10,9 @@
         <h1>
             Hola queridos estudiantes
         </h1>
+        <h2>
+            Les recuerdo tomar el curso de github de platzi
+        </h2>
     </div>
 </body>
 </html>
